--- a/app/assets/stylesheets/submission-show.scss
+++ b/app/assets/stylesheets/submission-show.scss
@@ -28,6 +28,5 @@
 }
 
 .comment-well {
-  background-color: $accent_color;
-  opacity: 0.8;
+  background-color: $background-color;
 }
